Utworzono za pomocą Colab

--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7BydCw+oYt6/smpvwe4mk",
+      "authorship_tag": "ABX9TyM+WnplJX6JwBwptRG6kwvb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,74 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "67BLIpAUVWTh"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "#HEy"
+        "**Clone git repository**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nmzxkun3XbMq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://{token}github.com/jadrzy/Lab-Python-in-Data-Science-.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kY7GIdLqXujW",
+        "outputId": "0fff0aab-b20b-4151-e7fd-a951b5d1e1a2"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'Lab-Python-in-Data-Science-' already exists and is not an empty directory.\n"
+          ]
+        }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Import dataset**"
+      ],
+      "metadata": {
+        "id": "NZVbgVQSX8GW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "data = pd.read_csv('/content/Lab-Python-in-Data-Science-/datasets/winequality-red.csv', sep = ';') # When data separator needed"
+      ],
+      "metadata": {
+        "id": "zhX7ltxWXX22"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "36Zzp_3gYOxw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xOQBpQUwW_2D"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
