Utworzono za pomocą Colab

--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+WnplJX6JwBwptRG6kwvb",
+      "authorship_tag": "ABX9TyOBkTCY5UmeqA5yAZ10dhon",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,22 +39,28 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://{token}github.com/jadrzy/Lab-Python-in-Data-Science-.git"
+        "!git clone https://{token}@github.com/jadrzy/Lab-Python-in-Data-Science-.git"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kY7GIdLqXujW",
-        "outputId": "0fff0aab-b20b-4151-e7fd-a951b5d1e1a2"
+        "outputId": "12c560f7-3aa5-4325-e16d-43d0cec35b99"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'Lab-Python-in-Data-Science-' already exists and is not an empty directory.\n"
+            "Cloning into 'Lab-Python-in-Data-Science-'...\n",
+            "remote: Enumerating objects: 109, done.\u001b[K\n",
+            "remote: Counting objects: 100% (109/109), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (80/80), done.\u001b[K\n",
+            "remote: Total 109 (delta 32), reused 77 (delta 17), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (109/109), 189.97 KiB | 1.44 MiB/s, done.\n",
+            "Resolving deltas: 100% (32/32), done.\n"
           ]
         }
       ]
@@ -77,7 +83,7 @@
       "metadata": {
         "id": "zhX7ltxWXX22"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
